python/test-data/testTypesSet2.err
Traceback (most recent call last):
  File "test-data/testTypesSet2.py", line 10, in <module>
    foo(set([lambda: "1", lambda: 42])) # error because the 2nd functions returns an int
  File "test-data/testTypesSet2.py", line 6, in foo
    res.append(f())
WyppTypeError: set is not a set[Callable[[], str]]
given:    {<function <lambda> at 0x00>, <function <lambda> at 0x00>}
expected: value of type set[Callable[[], str]]

context: foo(l: set[Callable[[], str]]) -> list[str]
                ^^^^^^^^^^^^^^^^^^^^^^
declared at: test-data/testTypesSet2.py:3
caused by: test-data/testTypesSet2.py:10
  | foo(set([lambda: "1", lambda: 42])) # error because the 2nd functions returns an int
